fix: fixing fonts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <h1>Даже и не стараюсь</h1>
+  <h1>My app for studying</h1>
 
   <my-navigation></my-navigation>
 </header>
