--- a/src/app/components/empty-route/empty-route.component.html
+++ b/src/app/components/empty-route/empty-route.component.html
@@ -1,3 +1,3 @@
-<h2>404 Страница не найдена</h2>
+<h2>404 Page not found</h2>
 
-<a [routerLink]="['/calculator']">Вернуться на главную</a>
+<a [routerLink]="['/calculator']">Return to home page</a>
